--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
   padding: 0;
   margin: 0;
 }
+
+ul {
+  list-style: none;
+}
 body {
   margin: 0;
   padding: 0;
@@ -512,6 +516,49 @@ button {
   position: relative;
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
+  transform-style: preserve-3d;
+  transform: translate(0);
+  bottom: -33px;
+}
+
+.testimonials-section .container .shadow:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: inherit;
+  transform: translate3d(0, 0, -1px);
+  background: conic-gradient(
+    from 90deg at 32% 83%,
+    #ffd700,
+    #f79d03,
+    #ee6907,
+    #e6390a,
+    #de0d0d,
+    #d61039,
+    #cf1261,
+    #c71585,
+    #cf1261,
+    #d61039,
+    #de0d0d,
+    #ee6907,
+    #f79d03,
+    #ffd700,
+    #ffd700,
+    #ffd700
+  );
+  filter: blur(91px);
+  /* clip-path: polygon(
+    -100vmax -100vmax,
+    100vmax -100vmax,
+    100vmax 100vmax,
+    -100vmax 100vmax,
+    -100vmax -100vmax,
+    0 0,
+    0 100%,
+    100% 100%,
+    100% 0,
+    0 0
+  ); */
 }
 
 .testimonials-section .container .image-container img {
@@ -522,7 +569,7 @@ button {
 }
 
 .testimonials-section .container .right p {
-  margin-top: 50px;
+  margin-top: 20px;
   font-size: 24px;
   line-height: 1.5;
   color: var(--light-magenta);
@@ -530,15 +577,15 @@ button {
 
 .testimonials-section .container .right .slide-container {
   border: 3px solid var(--white);
-  margin-top: 60px;
+  margin-top: 40px;
   width: fit-content;
-  padding: 30px 20px 30px 25px;
+  padding: 30px 20px 0 25px;
   position: relative;
   border-radius: 20px;
   background-color: var(--light-grey);
 }
 
-.testimonials-section .container .right .slide-container i {
+.testimonials-section .container .right .slide-container > i {
   position: absolute;
   top: -35px;
   padding: 15px;
@@ -558,4 +605,73 @@ button {
 .testimonials-section .slide-container .free-lancer-container span {
   color: var(--magenta);
   font-size: 20px;
+}
+
+.testimonials-section .slide-container .buttons-slide-container {
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  bottom: 40px;
+}
+
+/*footer*/
+
+footer {
+  background-color: var(--light-grey);
+}
+footer .container {
+  padding: 6.875rem 6.875rem 27px;
+  margin: 0 auto;
+}
+footer .container .top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+footer .container .left {
+  width: 40%;
+}
+
+footer .container .left h3 {
+  color: var(--light-magenta);
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+footer .container .left p {
+  font-size: 20px;
+  line-height: 1.5;
+  color: var(--light-magenta);
+}
+
+footer .container .right {
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
+}
+
+footer .container .right h2 {
+  color: var(--magenta);
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+footer .container .right li {
+  color: var(--dark-magenta);
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+footer .bottom {
+  display: flex;
+  justify-content: space-between;
+  color: var(--dark-magenta);
+  font-size: 24px;
+}
+
+footer .bottom-right {
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  color: var(--dark-magenta);
+  font-size: 24px;
 }
